# RustProxy

./: .cnb.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cnb/: settings.yml
.codebuddy/rules/: rustproxy-dev.mdc
.codebuddy/skills/rustproxy-async-net/: SKILL.md
.codebuddy/skills/rustproxy-async-net/references/: architecture.md
.codebuddy/skills/rustproxy-web-panel/: SKILL.md
.codebuddy/skills/rustproxy-web-panel/references/: api-design.md
.github/workflows/: build.yaml
configs/: client.toml  server.toml
crates/client/: Cargo.toml
crates/client/src/: connector.rs  main.rs  proxy_worker.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  logger.rs  proxy_manager.rs  tls.rs
crates/proto/: Cargo.toml
crates/proto/src/: frame.rs  lib.rs  message.rs
crates/server/: Cargo.toml
crates/server/src/: cert.rs  client_session.rs  main.rs  proxy_listener.rs  tunnel.rs
crates/web/: Cargo.toml
crates/web/assets/: index.html
crates/web/src/: api.rs  auth.rs  lib.rs  state.rs  ws.rs
deploy/: README.md  rustproxy-client.service  rustproxy-server.service
