[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/proto",
    "crates/server",
    "crates/client",
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourname/rustproxy"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Bytes & codec
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"

# Web (server only)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Internal crates
rustproxy-core = { path = "crates/core" }
rustproxy-proto = { path = "crates/proto" }
rustproxy-web = { path = "crates/web" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
