[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/proto",
    "crates/server",
    "crates/client",
    "crates/web",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A lightweight intranet penetration tool built with Rust"
repository = "https://cnb.cool/emchaye/RustProxy"
authors = ["RustProxy Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Bytes & codec
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"
rustls-pemfile = "2"
pem = { version = "3", features = ["std"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Web (server only)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Security
jsonwebtoken = "9"
bcrypt = "0.15"
getrandom = "0.2"

# Internal crates
rustproxy-core = { path = "crates/core" }
rustproxy-proto = { path = "crates/proto" }
rustproxy-web = { path = "crates/web" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
