[package]
name = "rustproxy-core"
description = "RustProxy shared core library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
pem = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
