[package]
name = "rustproxy-server"
description = "RustProxy server binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustproxy-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
rustproxy-core = { workspace = true }
rustproxy-proto = { workspace = true }
rustproxy-web = { workspace = true }
