[package]
name = "rustproxy-web"
description = "RustProxy web management panel (embedded into server)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
rustproxy-core = { workspace = true }
