[package]
name = "rustproxy-web"
description = "RustProxy web management panel (embedded into server)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
rustproxy-core = { workspace = true }
rustproxy-proto = { workspace = true }
